패키지명 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,9 +19,10 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
           <activity android:name=".detail.DetailActivity"/>
           <activity android:name=".interest.InterestActivity"/>
-          <activity android:name=".MainActivity"/>
+          <activity android:name=".main.MainActivity"/>
       
     </application>
 
