--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,20 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             android:usesCleartextTraffic="true">
-        <activity android:name=".share.ShareActivity">
+
+        <activity android:name=".splash.SplashActivity"
+                  android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.VIEW"/>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".share.ShareActivity"
+                  android:screenOrientation="portrait"
+                  android:windowSoftInputMode="stateAlwaysHidden">
             <intent-filter>
                 <action android:name="android.intent.action.SENDTO"/>
 
@@ -30,18 +43,16 @@
                 <data android:mimeType="text/plain"/>
             </intent-filter>
         </activity>
-        <activity android:name=".splash.SplashActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
-        </activity>
+        <activity android:name=".detail.DetailActivity"
+                  android:screenOrientation="portrait"/>
 
-          <activity android:name=".detail.DetailActivity"/>
-          <activity android:name=".interest.InterestActivity"/>
-          <activity android:name=".main.MainActivity"/>
-      
+        <activity android:name=".interest.InterestActivity"
+                  android:screenOrientation="portrait"/>
+
+        <activity android:name=".main.MainActivity"
+                  android:screenOrientation="portrait"/>
+
     </application>
 
 </manifest>
