--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,7 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             android:usesCleartextTraffic="true">
-
-        <activity android:name=".splash.SplashActivity"
-                  android:screenOrientation="portrait">
+        <activity android:name=".login.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <action android:name="android.intent.action.VIEW"/>
@@ -23,10 +21,24 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".register.RegisterActivity">
+        </activity>
+        <activity
+                android:name=".splash.SplashActivity"
+                android:screenOrientation="portrait">
+            <!--
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.VIEW"/>
 
-        <activity android:name=".share.ShareActivity"
-                  android:screenOrientation="portrait"
-                  android:windowSoftInputMode="stateAlwaysHidden">
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+            -->
+        </activity>
+        <activity
+                android:name=".share.ShareActivity"
+                android:screenOrientation="portrait"
+                android:windowSoftInputMode="stateAlwaysHidden">
             <intent-filter>
                 <action android:name="android.intent.action.SENDTO"/>
 
@@ -39,20 +51,20 @@
                 <action android:name="android.intent.action.SEND"/>
 
                 <category android:name="android.intent.category.DEFAULT"/>
+
                 <data android:mimeType="image/*"/>
                 <data android:mimeType="text/plain"/>
             </intent-filter>
         </activity>
-
-        <activity android:name=".detail.DetailActivity"
-                  android:screenOrientation="portrait"/>
-
-        <activity android:name=".interest.InterestActivity"
-                  android:screenOrientation="portrait"/>
-
-        <activity android:name=".main.MainActivity"
-                  android:screenOrientation="portrait"/>
-
+        <activity
+                android:name=".detail.DetailActivity"
+                android:screenOrientation="portrait"/>
+        <activity
+                android:name=".interest.InterestActivity"
+                android:screenOrientation="portrait"/>
+        <activity
+                android:name=".main.MainActivity"
+                android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
