--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          xmlns:tools="http://schemas.android.com/tools"
           package="com.mashup.molink">
 
+    <!--인터넷 권한-->
     <uses-permission android:name="android.permission.INTERNET"/>
+
     <!--카메라와 갤러리 권한-->
-    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
             android:name=".BaseApplication"
@@ -16,15 +19,10 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
-            android:usesCleartextTraffic="true">
-        <activity android:name="com.mashup.molink.ui.login.LoginActivity">
-
-        </activity>
-        <activity android:name="com.mashup.molink.ui.register.RegisterActivity">
-        </activity>
+            android:usesCleartextTraffic="true"
+            tools:targetApi="m">
         <activity
-                android:name="com.mashup.molink.ui.splash.SplashActivity"
-                android:screenOrientation="portrait">
+                android:name="com.mashup.molink.ui.splash.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <action android:name="android.intent.action.VIEW"/>
@@ -32,6 +30,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
         <activity
                 android:name="com.mashup.molink.ui.share.ShareActivity"
                 android:screenOrientation="portrait"
@@ -43,7 +42,9 @@
 
                 <data android:scheme="sms"/>
                 <data android:scheme="smsto"/>
-            </intent-filter> <!-- filter for sending text or images; accepts SEND action and text or image data -->
+            </intent-filter>
+
+            <!-- filter for sending text or images; accepts SEND action and text or image data -->
             <intent-filter>
                 <action android:name="android.intent.action.SEND"/>
 
@@ -53,15 +54,13 @@
                 <data android:mimeType="text/plain"/>
             </intent-filter>
         </activity>
-        <activity
-                android:name="com.mashup.molink.ui.detail.DetailActivity"
-                android:screenOrientation="portrait"/>
-        <activity
-                android:name="com.mashup.molink.ui.interest.InterestActivity"
-                android:screenOrientation="portrait"/>
-        <activity
-                android:name="com.mashup.molink.ui.main.MainActivity"
-                android:screenOrientation="portrait"/>
+
+        <activity android:name="com.mashup.molink.ui.login.LoginActivity"/>
+        <activity android:name="com.mashup.molink.ui.register.RegisterActivity"/>
+        <activity android:name="com.mashup.molink.ui.interest.InterestActivity"/>
+        <activity android:name="com.mashup.molink.ui.detail.DetailActivity"/>
+        <activity android:name="com.mashup.molink.ui.main.MainActivity"/>
+
     </application>
 
 </manifest>
